...
            }
            
            List(viewModel.posts, id: \.url) { post in
                NavigationLink(destination: PostView(post: post, vis: $tabBarVisibility)) {
                    PostRowView(post: post, showDomain: false)
                }
                .accessibilityIdentifier("PostRow")
                .onAppear { tabBarVisibility = .visible }
            }
            .listStyle(.inset)
            .refreshable { await viewModel.refresh(updateLastFetched: !isPreview) }
        }
    }
...
